--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jsonpath": "1.0.0",
     "lodash": "2.4.1",
     "moment": "2.22.2",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
     "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.4.0",
